# systems_finals_ground_truth

./: CMakeLists.txt  Systems_Finals_Artifact_Ground_Truth.xlsx  Systems_Finals_Fiducials_Ground_Truth.xlsx  package.xml  readme.md
artifacts/: systems_final_all.csv  systems_final_prelim1.csv  systems_final_prelim2.csv  systems_final_prize.csv
config/: systems_final_prelim1.yaml  systems_final_prelim2.yaml  systems_final_prize.yaml
launch/: view.launch  view_finals.rviz
