<package format="2">
  <name>finals_ground_truth</name>
  <version>1.0.0</version>
  <description>
    Survey scan data SubT Finals
  </description>
  <maintainer email="ryhalt@spawar.navy.mil">Ryan Halterman</maintainer>
  <author email="ryhalt@spawar.navy.mil">Ryan Halterman</author>
  <license>None</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pcl_ros</depend>

</package>
